@@ -25,7 +25,6 @@ glibc-source: script-not-executable usr/src/glibc/debian/debhelper.in/locales.po
 glibc-source: script-not-executable usr/src/glibc/debian/debhelper.in/locales.prerm
 glibc-source: script-not-executable usr/src/glibc/debian/debhelper.in/nscd.init
 glibc-source: script-not-executable usr/src/glibc/debian/debhelper.in/nscd.postrm
-glibc-source: script-not-executable usr/src/glibc/debian/debver2localesdep.pl
 glibc-source: script-not-executable usr/src/glibc/debian/generate-supported.mk
 glibc-source: script-not-executable usr/src/glibc/debian/local/manpages/Makefile
 glibc-source: script-not-executable usr/src/glibc/debian/local/sbin/ldconfig
