@@ -35,7 +35,6 @@ debian/control
 debian/control.in
 debian/copyright
 debian/debhelper.in
-debian/debver2localesdep.pl
 debian/generate-supported.mk
 debian/local
 debian/patches
