@@ -31,6 +31,7 @@ glibc (2.21-0experimental2) UNRELEASED; urgency=medium
     locale-gen.
   * libc6.1.symbols.alpha: remove invoke_dynamic_linker from libpcprofile.so.
     It has disappeared, but it is a private library.
+  * Remove debver2localesdep.pl, it is unused since 2.19-16.
 
   [ Steven Chamberlain ]
   * sysdeps/kfreebsd.mk: find kfreebsd-kernel-headers in multiarch path.
